<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.tugalsan</groupId>
    <artifactId>com.tugalsan.tst.yguard</artifactId>
    <version>1.0-SNAPSHOT</version>
    <dependencies>
		<dependency>
            <groupId>com.yworks</groupId>
            <artifactId>yguard</artifactId>
            <version>4.1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>com.tugalsan.api.file.html</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <exec.mainClass>com.tugalsan.tst.yguard.Main</exec.mainClass>
    </properties>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.4.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>${exec.mainClass}</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <release>22</release>
                    <!-- <enablePreview>true</enablePreview> -->
                    <!-- <compilerArgs>
                       <arg>- -add-modules</arg>
                        <arg>jdk.incubator.vector</arg>
                        <arg>-XX:+EnableDynamicAgentLoading 
                    </compilerArgs> -->
                </configuration>
            </plugin>
			<plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <id>obfuscate</id>
                        <configuration>
                            <target>
                                <property
                                    name="project.jar"
                                    value="${project.build.directory}/${project.build.finalName}.jar"/>
                                <property
                                    name="project.jar.unobf"
                                    value="${project.build.directory}/${project.build.finalName}_unobf.jar"/>
                                <move
                                    file="${project.jar}"
                                    tofile="${project.jar.unobf}"
                                    verbose="true"/>

                                <property
                                    name="runtime_classpath"
                                    refid="maven.runtime.classpath"/>
                                <taskdef
                                    name="yguard"
                                    classname="com.yworks.yguard.YGuardTask"
                                    classpath="${runtime_classpath}"/>
                                <yguard>
                                    <inoutpair in="${project.jar.unobf}" out="${project.jar}" />

                                    <rename logfile="${project.build.directory}/${project.build.finalName}_renamelog.xml">
                                        <keep>
                                            <method name="void main(java.lang.String[])" class="${mainclass}"/>
                                        </keep>
                                    </rename>
                                </yguard>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>			
        </plugins>
    </build>
</project>